spacers units fixed, RWD .medium added, .clearfix border-collapse

--- a/less/_01-base.less
+++ b/less/_01-base.less
@@ -1,5 +1,5 @@
 /*!
-* www.KNACSS.com V3.0.7 (2014-08-21) @author: Raphael Goetter, Alsacreations
+* www.KNACSS.com V3.0.8 (2014-08-22) @author: Raphael Goetter, Alsacreations
 * Licence WTFPL http://www.wtfpl.net/
 */
 
@@ -297,6 +297,7 @@ table {
 		content: "";
 		display: table;
 		clear: both;
+		border-collapse: collapse;
 	}
 }
 
@@ -506,32 +507,26 @@ img.end {
 	}
 	
 	.mas { 
-		margin: @small-value * @base-font-size * 1px; // fallback ie678
 		margin: @small-value; 
 	}
 	
 	.mam { 
-		margin: @medium-value * @base-font-size * 1px; // fallback ie678
 		margin: @medium-value; 
 	}
 	
 	.mal { 
-		margin: @large-value * @base-font-size * 1px; // fallback ie678
 		margin: @large-value; 
 	}
 	
 	.pas { 
-		padding: @small-value * @base-font-size * 1px; // fallback ie678
 		padding: @small-value; 
 	}
 	
 	.pam { 
-		padding: @medium-value * @base-font-size * 1px; // fallback ie678
 		padding: @medium-value; 
 	}
 	
 	.pal { 
-		padding: @large-value * @base-font-size * 1px; // fallback ie678
 		padding: @large-value; 
 	}
 	
@@ -540,17 +535,14 @@ img.end {
 	}
 	
 	.mts { 
-		margin-top: @small-value * @base-font-size * 1px; // fallback ie678
 		margin-top: @small-value; 
 	}
 	
 	.mtm { 
-		margin-top: @medium-value * @base-font-size * 1px; // fallback ie678
 		margin-top: @medium-value; 
 	}
 	
 	.mtl { 
-		margin-top: @large-value * @base-font-size * 1px; // fallback ie678
 		margin-top: @large-value; 
 	}
 	
@@ -559,17 +551,14 @@ img.end {
 	}
 	
 	.mrs { 
-		margin-right: @small-value * @base-font-size * 1px; // fallback ie678
 		margin-right: @small-value; 
 	}
 	
 	.mrm { 
-		margin-right: @medium-value * @base-font-size * 1px; // fallback ie678
 		margin-right: @medium-value; 
 	}
 	
 	.mrl { 
-		margin-right: @large-value * @base-font-size * 1px; // fallback ie678
 		margin-right: @large-value; 
 	}
 	
@@ -578,17 +567,14 @@ img.end {
 	}
 	
 	.mbs { 
-		margin-bottom: @small-value * @base-font-size * 1px; // fallback ie678
 		margin-bottom: @small-value; 
 	}
 	
 	.mbm { 
-		margin-bottom: @medium-value * @base-font-size * 1px; // fallback ie678
 		margin-bottom: @medium-value; 
 	}
 	
 	.mbl { 
-		margin-bottom: @large-value * @base-font-size * 1px; // fallback ie678
 		margin-bottom: @large-value; 
 	}
 	
@@ -597,17 +583,14 @@ img.end {
 	}
 	
 	.mls { 
-		margin-left: @small-value * @base-font-size * 1px; // fallback ie678
 		margin-left: @small-value; 
 	}
 	
 	.mlm { 
-		margin-left: @medium-value * @base-font-size * 1px; // fallback ie678
 		margin-left: @medium-value; 
 	}
 	
 	.mll { 
-		margin-left: @large-value * @base-font-size * 1px; // fallback ie678
 		margin-left: @large-value; 
 	}
 
@@ -616,17 +599,14 @@ img.end {
 	}
 	
 	.pts { 
-		padding-top: @small-value * @base-font-size * 1px; // fallback ie678
 		padding-top: @small-value; 
 	}
 	
 	.ptm { 
-		padding-top: @medium-value * @base-font-size * 1px; // fallback ie678
 		padding-top: @medium-value; 
 	}
 	
 	.ptl { 
-		padding-top: @large-value * @base-font-size * 1px; // fallback ie678
 		padding-top: @large-value; 
 	}
 	
@@ -635,17 +615,14 @@ img.end {
 	}
 	
 	.prs { 
-		padding-right: @small-value * @base-font-size * 1px; // fallback ie678
 		padding-right: @small-value; 
 	}
 	
 	.prm { 
-		padding-right: @medium-value * @base-font-size * 1px; // fallback ie678
 		padding-right: @medium-value; 
 	}
 	
 	.prl { 
-		padding-right: @large-value * @base-font-size * 1px; // fallback ie678
 		padding-right: @large-value; 
 	}
 	
@@ -654,17 +631,14 @@ img.end {
 	}
 	
 	.pbs { 
-		padding-bottom: @small-value * @base-font-size * 1px; // fallback ie678
 		padding-bottom: @small-value; 
 	}
 	
 	.pbm { 
-		padding-bottom: @medium-value * @base-font-size * 1px; // fallback ie678
 		padding-bottom: @medium-value; 
 	}
 	
 	.pbl { 
-		padding-bottom: @large-value * @base-font-size * 1px; // fallback ie678
 		padding-bottom: @large-value; 
 	}
 	
@@ -673,17 +647,14 @@ img.end {
 	}
 	
 	.pls { 
-		padding-left: @small-value * @base-font-size * 1px; // fallback ie678
 		padding-left: @small-value; 
 	}
 	
 	.plm { 
-		padding-left: @medium-value * @base-font-size * 1px; // fallback ie678
 		padding-left: @medium-value; 
 	}
 	
 	.pll { 
-		padding-left: @large-value * @base-font-size * 1px; // fallback ie678
 		padding-left: @large-value; 
 	}
 	
