--- a/sass/_01-base.scss
+++ b/sass/_01-base.scss
@@ -1,5 +1,5 @@
 /*!
-* www.KNACSS.com V3.0.7 (2014-08-21) @author: Raphael Goetter, Alsacreations (with help from Hugo Giraudel)
+* www.KNACSS.com V3.0.8 (2014-08-22) @author: Raphael Goetter, Alsacreations (with help from Hugo Giraudel)
 * Licence WTFPL http://www.wtfpl.net/
 */
 
@@ -291,6 +291,7 @@ table {
 		content: "";
 		display: table;
 		clear: both;
+		border-collapse: collapse;
 	}
 }
 
